--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "start": "nodemon ./src/server/index.ts",
         "test:unit": "jest",
-        "test:e2e": "node_modules/.bin/hermione",
+        "test:e2e": "jest --config jest.config.e2e.js",
         "test:e2e:gui": "node_modules/.bin/hermione gui",
         "test": "npm run test:unit && npm run test:e2e",
         "build": "webpack --mode=production --node-env=production",
@@ -13,12 +13,14 @@
     "dependencies": {
         "@bem-react/classname": "^1.5.12",
         "@testing-library/react": "^12.1.5",
+        "@testing-library/user-event": "^14.4.3",
         "axios": "^0.23.0",
         "bootstrap": "^5.1.3",
         "express": "^4.17.1",
         "faker": "^5.5.3",
         "html-reporter": "^9.7.1",
         "immer": "^9.0.6",
+        "puppeteer": "^20.7.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -31,6 +33,7 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.3.1",
+        "@testing-library/jest-dom": "^5.16.5",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.9",
         "@types/jest": "^29.2.4",
@@ -48,6 +51,7 @@
         "html-webpack-plugin": "^5.3.2",
         "jest": "^29.3.1",
         "jest-environment-jsdom": "^29.3.1",
+        "jest-puppeteer": "^9.0.0",
         "mini-css-extract-plugin": "^2.4.2",
         "nodemon": "^2.0.13",
         "sass": "^1.42.1",
